Fixed submit feature, added base64 encoding, added leaderboard overflow, username validation

--- a/public/singler/style.css
+++ b/public/singler/style.css
@@ -19,6 +19,10 @@ h1 {
   margin-top:40vh; font-size:2em;
 }
 
+.leaderboardcontainer::-webkit-scrollbar {
+  display: none;
+}
+
 .leaderboardcontainer {
   display: flex;
   width: 250px;
@@ -31,6 +35,7 @@ h1 {
   border-radius: 20px;
   align-content: flex-start;
   align-items: flex-start;
+  overflow-x: auto;
 }
 
 .leaderboard-text{
@@ -44,13 +49,18 @@ h1 {
 
 .contentwrapper {
   display: flex;
-  width:200px;
-  overflow:auto;
+  width: max-content;
+  overflow-x: auto; /* Allow horizontal scrolling */
   align-items: flex-start;
-  padding: 0 20px;
   flex-direction: column;
   flex: 1;
-  min-height: 0px;
+  min-height: 0;
+}
+
+
+.contentwrapper span {
+  white-space: nowrap;
+  margin-left: 8px;
 }
 
 input {
